remove dev tools

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<link href="styles/main.css" rel="stylesheet" type="text/css">
 
     <script src="js/vendor/dat.gui/dat.gui.js"></script>
-    <script src="js/vendor/three/three.js"></script>
+    <script src="js/vendor/three/three.min.js"></script>
     <script src="js/vendor/three/OrbitControls.js"></script>
 		<script src="js/vendor/three/GLTFLoader.js"></script>
    	<script src="js/vendor/stats/stats.min.js"></script>
